--- a/html-web-project/src/cart/cart.html
+++ b/html-web-project/src/cart/cart.html
@@ -38,6 +38,7 @@
     .empty { background:#fff; padding:18px; border-radius:10px; text-align:center; }
   </style>
 </head>
+
 <body>
   <header>
     <h1>Carrito de Compras</h1>
@@ -67,181 +68,145 @@
 
   <!-- SweetAlert2 -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
   <!-- jsPDF -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
   <script>
-    function generarFacturaPDF(venta, items) {
-      try {
-        const { jsPDF } = window.jspdf;
-        const doc = new jsPDF({ unit: 'pt', format: 'a4' });
-        let y = 40;
-        doc.setFontSize(16);
-        doc.text(`Factura N° ${venta.id}`, 40, y);
-        y += 24;
-        doc.setFontSize(12);
-        doc.text(`Total: $${Number(venta.total).toLocaleString()}`, 40, y);
-        y += 20;
-        doc.text('----------------------------------------', 40, y); y += 16;
-        items.forEach(it => {
-          const line = `${it.nombre} x${it.cantidad}  $${Number(it.precio_unitario || it.precio).toLocaleString()}  Sub: $${(Number(it.precio_unitario || it.precio) * Number(it.cantidad)).toLocaleString()}`;
-          const split = doc.splitTextToSize(line, 500);
-          doc.text(split, 40, y);
-          y += 14 * (split.length);
-          if (y > 750) { doc.addPage(); y = 40; }
-        });
-        doc.save(`factura_${venta.id}.pdf`);
-      } catch (e) {
-        console.error('Error generando PDF', e);
-        const w = window.open('', '_blank');
-        const rows = (items||[]).map(i => `<tr><td>${i.nombre}</td><td>${i.cantidad}</td><td style="text-align:right">$${Number(i.precio_unitario||i.precio).toLocaleString()}</td></tr>`).join('');
-        const html = `<!doctype html><html><head><meta charset="utf-8"><title>Factura N° ${venta.id}</title></head><body><h3>Factura N° ${venta.id}</h3><table>${rows}</table><p>Total: $${Number(venta.total).toLocaleString()}</p><script>setTimeout(()=>window.print(),300);</script></body></html>`;
-        w.document.write(html); w.document.close();
-      }
+
+  // ✅ MOSTRAR CARRITO
+  function mostrarCarrito() {
+
+    const cont = document.getElementById("carrito");
+    const resumen = document.getElementById("resumen");
+    const totalEl = document.getElementById("total");
+
+    let carrito = getCart();
+    cont.innerHTML = "";
+
+    if (!carrito.length) {
+      cont.innerHTML = `<div class="empty">El carrito está vacío 🛒</div>`;
+      if (resumen) resumen.style.display = "none";
+      return;
     }
 
-    function mostrarFacturaModal(venta, items) {
-      const rows = items.map(i => `<tr><td>${i.nombre}</td><td style="text-align:center">${i.cantidad}</td><td style="text-align:right">$${Number(i.precio).toLocaleString()}</td><td style="text-align:right">$${(Number(i.precio)*Number(i.cantidad)).toLocaleString()}</td></tr>`).join('');
-      const html = `
-        <div style="text-align:left">
-          <p><b>N° venta:</b> ${venta.id}</p>
-          <table style="width:100%;border-collapse:collapse;margin-top:8px">
-            <thead><tr><th>Producto</th><th>Cant.</th><th style="text-align:right">Precio</th><th style="text-align:right">Subtotal</th></tr></thead>
-            <tbody>${rows}</tbody>
-            <tfoot><tr><td colspan="3" style="text-align:right"><b>Total</b></td><td style="text-align:right"><b>$${Number(venta.total).toLocaleString()}</b></td></tr></tfoot>
-          </table>
-        </div>`;
-      Swal.fire({ title: 'Pedido confirmado', html, width:700, showCloseButton:true, showCancelButton:true, confirmButtonText:'Descargar factura', cancelButtonText:'Cerrar' }).then(res => {
-        if (res.isConfirmed) {
-          generarFacturaPDF(venta, items.map(i => ({ nombre: i.nombre, cantidad: i.cantidad, precio_unitario: i.precio_unitario || i.precio })));
-        }
+    let total = 0;
+
+    carrito.forEach((p, i) => {
+      const precio = Number(p.precio || 0);
+      const cant = Number(p.cantidad || 1);
+      const sub = precio * cant;
+      total += sub;
+
+      const imgSrc = normalizarImagen(p.imagen || p.imagenUrl);
+
+      const item = document.createElement("div");
+      item.className = "carrito-item";
+
+      item.innerHTML = `
+        <img src="${imgSrc}" alt="${p.nombre}" onerror="this.src='../assets/img/no-image.jpg'">
+        <div class="carrito-info">
+          <h3>${p.nombre}</h3>
+          <p>Precio: $${fmt(precio)}</p>
+          <p>Cantidad: ${fmt(cant)}</p>
+        </div>
+
+        <div class="carrito-acciones">
+          <button class="cantidad-btn" data-a="menos">-</button>
+          <button class="cantidad-btn" data-a="mas">+</button>
+          <button class="remove-btn" data-a="eliminar">Eliminar</button>
+        </div>
+
+        <div class="subtotal">$${fmt(sub)}</div>
+      `;
+
+      item.querySelector('[data-a="menos"]').onclick = () => {
+        carrito[i].cantidad = Math.max(0, cant - 1);
+        if (carrito[i].cantidad === 0) carrito.splice(i, 1);
+        setCart(carrito);
+        mostrarCarrito();
+      };
+
+      item.querySelector('[data-a="mas"]').onclick = () => {
+        carrito[i].cantidad = cant + 1;
+        setCart(carrito);
+        mostrarCarrito();
+      };
+
+      item.querySelector('[data-a="eliminar"]').onclick = () => {
+        carrito.splice(i, 1);
+        setCart(carrito);
+        mostrarCarrito();
+      };
+
+      cont.appendChild(item);
+    });
+
+    if (totalEl) totalEl.textContent = "Total: $" + fmt(total);
+    if (resumen) resumen.style.display = "block";
+
+  }   <!-- ✅ ESTA LLAVE FALTABA EN TU CÓDIGO ANTES -->
+
+  // ✅ FINALIZAR COMPRA
+  async function finalizarCompra() {
+    const items = getCart();
+
+    if (!items.length) {
+      Swal.fire({
+        icon: 'info',
+        title: 'Carrito vacío',
+        text: 'Tu carrito está vacío.'
       });
-    }
-    // ===== Config =====
-    const API_URL = "https://ferreteriaexpress.shop/api";
-
-    // ===== Storage =====
-    function getCart() {
-      const a = JSON.parse(localStorage.getItem("carrito") || "[]");
-      if (Array.isArray(a) && a.length) return a;
-      return JSON.parse(localStorage.getItem("cart") || "[]");
-    }
-    function setCart(items){
-      localStorage.setItem("carrito", JSON.stringify(items));
-      localStorage.setItem("cart", JSON.stringify(items));
-    }
-    function fmt(n){ return Number(n||0).toLocaleString("es-CO"); }
-
-    // Resolver URL de imagen guardada en el carrito
-    // (acepta absoluta, /uploads/... o relativa guardada desde el catálogo)
-    function normalizarImagen(src){
-      if (!src) return "../assets/img/no-image.jpg";
-      if (/^https?:\/\//i.test(src)) return src; // absoluta
-      if (src.startsWith("/")) return src;       // root-relative del backend
-      return `../${src}`;                         // relativa desde /cart/cart.html
+      return;
     }
 
-    // ===== UI =====
-    function mostrarCarrito() {
-      const cont = document.getElementById("carrito");
-      const resumen = document.getElementById("resumen");
-      const totalEl = document.getElementById("total");
+    const user = JSON.parse(localStorage.getItem("usuario") || "null");
 
-      let carrito = getCart();
-      cont.innerHTML = "";
+    const payload = {
+      clienteId: user?.id ?? null,
+      metodoPago: "Efectivo",
+      items: items.map(x => ({
+        id: Number(x.id),
+        cantidad: Number(x.cantidad || 1)
+      }))
+    };
 
-      if (!carrito.length) {
-        cont.innerHTML = `<div class="empty">El carrito está vacío 🛒</div>`;
-        if (resumen) resumen.style.display = "none";
+    try {
+      const r = await fetch("https://ferreteriaexpress.shop/api/checkout", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(payload)
+      });
+
+      const data = await r.json();
+
+      if (!r.ok || !data.ok) {
+        Swal.fire({
+          icon: 'error',
+          title: 'Error',
+          text: data.mensaje || "No se pudo confirmar el pedido."
+        });
         return;
       }
 
-      let total = 0;
-      carrito.forEach((p, i) => {
-        const precio = Number(p.precio||0);
-        const cant = Number(p.cantidad||1);
-        const sub = precio * cant;
-        total += sub;
+      mostrarFacturaModal(data.venta, data.venta.items || items);
 
-        const imgSrc = normalizarImagen(p.imagen || p.imagenUrl);
+      localStorage.removeItem("carrito");
+      localStorage.removeItem("cart");
+      localStorage.setItem("lastCheckout", Date.now());
 
-        const item = document.createElement("div");
-        item.className = "carrito-item";
-        item.innerHTML = `
-          <img src="${imgSrc}" alt="${p.nombre}" onerror="this.src='../assets/img/no-image.jpg'">
-          <div class="carrito-info">
-            <h3>${p.nombre}</h3>
-            <p>Precio: $${fmt(precio)}</p>
-            <p>Cantidad: ${fmt(cant)}</p>
-          </div>
-          <div class="carrito-acciones">
-            <button class="cantidad-btn" data-a="menos">-</button>
-            <button class="cantidad-btn" data-a="mas">+</button>
-            <button class="remove-btn" data-a="eliminar">Eliminar</button>
-          </div>
-          <div class="subtotal">$${fmt(sub)}</div>
-        `;
+      mostrarCarrito();
 
-        item.querySelector('[data-a="menos"]').onclick = () => {
-          carrito[i].cantidad = Math.max(0, cant - 1);
-          if (carrito[i].cantidad === 0) carrito.splice(i,1);
-          setCart(carrito); mostrarCarrito();
-        };
-        item.querySelector('[data-a="mas"]').onclick = () => {
-          carrito[i].cantidad = cant + 1;
-          setCart(carrito); mostrarCarrito();
-        };
-        item.querySelector('[data-a="eliminar"]').onclick = () => {
-          carrito.splice(i,1);
-          setCart(carrito); mostrarCarrito();
-        };
-
-        cont.appendChild(item);
+    } catch (err) {
+      Swal.fire({
+        icon: 'error',
+        title: 'Error',
+        text: 'Error procesando el pedido.'
       });
-
-      if (totalEl) totalEl.textContent = "Total: $" + fmt(total);
-      if (resumen) resumen.style.display = "block";
     }
+  }
 
-    // ===== Checkout =====
-    async function finalizarCompra() {
-  const items = getCart();
-  if (!items.length) { Swal.fire({ icon: 'info', title: 'Carrito vacío', text: 'Tu carrito está vacío.' }); return; }
+  window.finalizarCompra = finalizarCompra;
+  document.addEventListener("DOMContentLoaded", mostrarCarrito);
 
-  const user = JSON.parse(localStorage.getItem("usuario") || "null");
-
-  const payload = {
-    clienteId: user?.id ?? null,     // <= importante
-    metodoPago: "Efectivo",
-    items: items.map(x => ({ id:+x.id, cantidad:+(x.cantidad||1) }))
-   };
-
-      try {
-        const r = await fetch(`${API_URL}/checkout`, {
-          method:"POST",
-          headers:{ "Content-Type":"application/json" },
-          body: JSON.stringify(payload)
-        });
-        const data = await r.json();
-  if (!r.ok || !data.ok) { Swal.fire({ icon: 'error', title: 'Error', text: data.mensaje||"No se pudo confirmar" }); return; }
-
-  // Mostrar modal con factura (usar detalle del servidor si está disponible)
-  mostrarFacturaModal(data.venta, data.venta.items || items);
-  localStorage.removeItem("carrito");
-  localStorage.removeItem("cart");
-  localStorage.setItem("lastCheckout", String(Date.now()));
-  mostrarCarrito(); // queda vacío
-
-      } catch (e) {
-        console.error(e);
-        Swal.fire({ icon: 'error', title: 'Error', text: 'Error procesando el pedido.' });
-      }
-    }
-
-    window.finalizarCompra = finalizarCompra;
-
-    document.addEventListener("DOMContentLoaded", mostrarCarrito);
-  </script>
-</body>
-</html>
-
+</script>
