--- a/html-web-project/src/catalog/catalog.html
+++ b/html-web-project/src/catalog/catalog.html
@@ -79,203 +79,11 @@
 
   <!-- jsPDF -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <!-- Módulo común del carrito (helpers + factura) -->
+  <script type="module" src="../assets/js/cartCore.js"></script>
 
   <script>
-  // ============================================
-  // ✅ CONFIG
-  // ============================================
-  const API_URL = "https://ferreteriaexpress.shop/api";
-
-  const BACKEND_ORIGIN = (() => {
-    try { return new URL(API_URL).origin; }
-    catch { return "https://ferreteriaexpress.shop"; }
-  })();
-
-  let carrito = [];
-  let productosCache = [];
-
-  function getCartLS() { 
-    return JSON.parse(localStorage.getItem("carrito") || "[]");
-  }
-
-  function setCartLS(v) {
-    localStorage.setItem("carrito", JSON.stringify(v));
-    localStorage.setItem("cart", JSON.stringify(v));
-  }
-
-  // ============================================
-  // ✅ Imagen de productos
-  // ============================================
-  function srcDeProducto(p) {
-    if (p && p.imagen) {
-      const clean = String(p.imagen).replace(/^\/+/, "");
-      return `${BACKEND_ORIGIN}/assets/img/productos/${clean}`;
-    }
-    return 'data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="300" height="200"><rect width="100%" height="100%" fill="%23e0e0e0"/><text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="%23666" font-family="Arial" font-size="20">Sin imagen</text></svg>';
-  }
-
-  // ============================================
-  // ✅ Cargar productos
-  // ============================================
-  async function cargarProductos() {
-    const cont = document.getElementById("productos");
-
-    try {
-      const res = await fetch(`${API_URL}/productos`);
-      if (!res.ok) throw new Error(`HTTP ${res.status}`);
-
-      productosCache = await res.json();
-      cont.innerHTML = "";
-
-      if (!Array.isArray(productosCache) || !productosCache.length) {
-        cont.innerHTML = "<p>No hay productos disponibles.</p>";
-        return;
-      }
-
-      productosCache.forEach(p => {
-        const agotado = Number(p.cantidad || 0) <= 0;
-        const imgSrc = srcDeProducto(p);
-
-        cont.innerHTML += `
-        <div class="producto-card">
-          <img src="${imgSrc}" class="producto-img">
-          <h3>${p.nombre}</h3>
-          <p><b>Precio:</b> $${Number(p.precio).toLocaleString()}</p>
-          <p><b>Stock:</b> ${p.cantidad}</p>
-          <button class="btn-comprar" ${agotado ? "disabled" : ""}
-            onclick="agregarAlCarritoPorId(${p.id})">
-            ${agotado ? "Agotado" : "Añadir al carrito"}
-          </button>
-        </div>`;
-      });
-
-    } catch (err) {
-      cont.innerHTML = `<p>Error cargando productos: ${String(err)}</p>`;
-    }
-  }
-
-  // ============================================
-  // ✅ Carrito
-  // ============================================
-  function toggleCarrito() {
-    const panel = document.getElementById("carrito");
-    panel.classList.toggle("abierto");
-    const abierto = panel.classList.contains("abierto");
-    panel.setAttribute("aria-hidden", abierto ? "false" : "true");
-  }
-
-  // ============================================
-  // ✅ Modal de factura (compartido con cart)
-  // ============================================
-  function mostrarFacturaModal(venta, items) {
-    const cliente = venta?.cliente || JSON.parse(localStorage.getItem('usuario')||'null') || {};
-    const nombreCliente = cliente?.nombre || 'Consumidor final';
-    const correoCliente = cliente?.correo || '';
-    const metodoPago = venta?.metodoPago || 'Efectivo';
-    const fecha = venta?.fecha ? new Date(venta.fecha) : new Date();
-
-    const rows = (items || []).map(i => {
-      const precio = Number(i.precio || i.precio_unitario);
-      const cant = Number(i.cantidad);
-      return `<tr>
-        <td>${i.nombre}</td>
-        <td style=\"text-align:center\">${cant}</td>
-        <td style=\"text-align:right\">$${(precio).toLocaleString()}</td>
-        <td style=\"text-align:right\">$${(precio*cant).toLocaleString()}</td>
-      </tr>`;}).join('');
-
-    const html = `
-      <div style=\"text-align:left;font-family:Arial,sans-serif\">
-        <div style=\"display:flex;justify-content:space-between;align-items:center;margin-bottom:12px\">
-          <div>
-            <div style=\"font-size:20px;font-weight:700\">Ferretería Express</div>
-            <div style=\"color:#555\">NIT 900.000.000-1</div>
-            <div style=\"color:#555\">https://ferreteriaexpress.shop</div>
-          </div>
-          <div style=\"text-align:right\">
-            <div><b>Factura N°</b> ${venta?.id ?? '-'}</div>
-            <div><b>Fecha:</b> ${fecha.toLocaleString()}</div>
-          </div>
-        </div>
-
-        <div style=\"background:#f7f7f7;border:1px solid #eee;padding:10px;border-radius:8px;margin-bottom:12px\">
-          <div><b>Cliente:</b> ${nombreCliente}</div>
-          ${correoCliente ? `<div><b>Correo:</b> ${correoCliente}</div>` : ''}
-          <div><b>Método de pago:</b> ${metodoPago}</div>
-        </div>
-
-        <table style=\"width:100%;border-collapse:collapse;margin-top:8px\">
-          <thead>
-            <tr>
-              <th style=\"border-bottom:2px solid #ddd;text-align:left;padding:6px 4px\">Producto</th>
-              <th style=\"border-bottom:2px solid #ddd;text-align:center;padding:6px 4px\">Cant.</th>
-              <th style=\"border-bottom:2px solid #ddd;text-align:right;padding:6px 4px\">Precio</th>
-              <th style=\"border-bottom:2px solid #ddd;text-align:right;padding:6px 4px\">Subtotal</th>
-            </tr>
-          </thead>
-          <tbody>${rows}</tbody>
-          <tfoot>
-            <tr>
-              <td colspan=\"3\" style=\"text-align:right;padding:8px 4px\"><b>Total</b></td>
-              <td style=\"text-align:right;padding:8px 4px\"><b>$${Number(venta?.total||0).toLocaleString()}</b></td>
-            </tr>
-          </tfoot>
-        </table>
-      </div>`;
-
-    Swal.fire({ title: 'Pedido confirmado', html, width:760, showCloseButton:true, showCancelButton:true, confirmButtonText:'Descargar factura', cancelButtonText:'Cerrar' })
-      .then(res => {
-        if (res.isConfirmed) {
-          if (window.jspdf && window.jspdf.jsPDF) {
-            const { jsPDF } = window.jspdf;
-            try {
-              const doc = new jsPDF({ unit: 'pt', format: 'a4' });
-              let y = 40;
-              doc.setFontSize(18);
-              doc.text('Ferretería Express', 40, y); y += 18;
-              doc.setFontSize(10);
-              doc.text('NIT 900.000.000-1', 40, y); y += 14;
-              doc.text('https://ferreteriaexpress.shop', 40, y); y += 20;
-              doc.setFontSize(14);
-              doc.text(`Factura N° ${venta?.id ?? '-'}`, 40, y);
-              doc.text(`Fecha: ${fecha.toLocaleString()}`, 300, y);
-              y += 24;
-              doc.setFontSize(12);
-              doc.text(`Cliente: ${nombreCliente}`, 40, y); y += 14;
-              if (correoCliente) { doc.text(`Correo: ${correoCliente}`, 40, y); y += 14; }
-              doc.text(`Método de pago: ${metodoPago}`, 40, y); y += 18;
-              const colX = [40, 360, 430, 500];
-              doc.setFontSize(11);
-              doc.text('Producto', colX[0], y);
-              doc.text('Cant.', colX[1], y);
-              doc.text('Precio', colX[2], y);
-              doc.text('Subtotal', colX[3], y);
-              y += 8; doc.line(40, y, 550, y); y += 12;
-              (items||[]).forEach(it => {
-                const precio = Number(it.precio || it.precio_unitario || 0);
-                const cant = Number(it.cantidad || 0);
-                doc.text(String(it.nombre), colX[0], y);
-                doc.text(String(cant), colX[1], y, { align: 'right' });
-                doc.text(`$${precio.toLocaleString()}`, colX[2], y, { align: 'right' });
-                doc.text(`$${(precio*cant).toLocaleString()}`, colX[3], y, { align: 'right' });
-                y += 16;
-              });
-              y += 6; doc.line(40, y, 550, y); y += 18;
-              doc.setFontSize(12);
-              doc.text('Total:', 460, y);
-              doc.text(`$${Number(venta?.total||0).toLocaleString()}`, 550, y, { align: 'right' });
-              y += 30;
-              doc.setFontSize(10); doc.text('Gracias por su compra.', 40, y);
-              doc.save(`factura_${venta?.id ?? 'venta'}.pdf`);
-            } catch (e) {
-              const w = window.open('', '_blank'); w.document.write(`<!doctype html><html><head><meta charset="utf-8"><title>Factura</title></head><body>${html}</body></html>`); w.document.close();
-            }
-          } else {
-            const w = window.open('', '_blank'); w.document.write(`<!doctype html><html><head><meta charset=\"utf-8\"><title>Factura</title></head><body>${html}</body></html>`); w.document.close();
-          }
-        }
-      });
-  }
+  // usar implementación compartida en cartCore.js -> window.mostrarFacturaModal
 
   function actualizarCarrito() {
     const cont = document.getElementById("carrito-items");
